# string_cosmo_communication

./: .gitignore  LICENSE.md  README.md  compactification.py  pyproject.toml  template_registry.py
.github/workflows/: docs.yml
docs/: conf.py  examples.rst  index.rst  installation.rst  remove_extra_text.py  requirements.txt
docs/_build/doctrees/: environment.pickle  examples.doctree  index.doctree  installation.doctree
docs/_build/html/: .buildinfo  examples.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/api/: manim_string_cosmo.figures.rst  manim_string_cosmo.rst  manim_string_cosmo.templates.collection.rst  manim_string_cosmo.templates.rst  string_cosmo.figures.rst  string_cosmo.tables_and_plots.rst  string_cosmo.templates.collection.rst  string_cosmo.templates.rst
examples/: debug.py  example_animations.py  example_objects.py  example_tables_plots.py  manim.cfg  multi_template.py  template_registry.py
src/anim_theoretical/: __init__.py
src/anim_theoretical/objects/: __init__.py  ads_jc.py  black_hole.py  brane_general.py  bubble.py  vacuum_general.py
src/anim_theoretical/tables_and_plots/: __init__.py  plot_general.py  plot_instanton.py  plot_quantum.py  table_bh_embedding.py  table_energy_scales.py  table_general.py  table_summary.py
src/anim_theoretical/templates/: __init__.py  color_scheme.py  dark_depths.py  fancy_mint.py
src/manim_string_cosmo/: my_imports.py
src/manim_string_cosmo/objects/: ads_jc.py  black_hole.py  brane_general.py  bubble.py
(+264 files in other folders)
